--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/NOTICE' // will not include NOTICE file
+        exclude 'META-INF/LICENSE' // will not include LICENSE file
+    }
 }
 
 dependencies {
-    provided 'com.nicolasmouchel:executordecorator-annotations:2.0'
+    compile 'com.nicolasmouchel:executordecorator-annotations:2.0'
     annotationProcessor 'com.nicolasmouchel:executordecorator-compiler:2.0'
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -33,6 +37,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:support-compat:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.2.0'
+    compile 'com.google.auto.value:auto-value:1.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'junit:junit:4.12'
