--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ccr.cleanarchisample">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -22,8 +22,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".detail.ui.DetailGitHubForkActivity"
-                  android:label="@string/detail_label"/>
+        <activity
+            android:name=".detail.ui.DetailGitHubForkActivity"
+            android:label="@string/detail_label"
+            android:theme="@style/AppTheme.DetailActivity" />
 
     </application>
 
